--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,14 @@
 
     <groupId>dk.qpqp</groupId>
     <artifactId>MysqlMadeEasy</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
+
+    <licenses>
+        <license>
+            <name>GNU GENERAL PUBLIC LICENSE Version 2</name>
+            <url>http://www.gnu.org/licenses/gpl-2.0.txt</url>
+        </license>
+    </licenses>
 
     <dependencies>
         <dependency>
